# wasm-stats

./: .gitignore  Cargo.toml  README.md  package-lock.json
downloader/: index.mjs  package-lock.json  package.json  results.csv  wasms.csv
src/: main.rs
