[package]
authors = ["Ingvar Stepanyan <rreverser@google.com>"]
edition = "2018"
name = "wasm-stats"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
indicatif = "0.16.2"
rayon = "1.5.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
wasmbin = {version = "0.3.1", features = ["proposals"]}
written_size = "0.1.0"
